--- a/lambda/loadSampleDataToDynamo/package.json
+++ b/lambda/loadSampleDataToDynamo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myshinynewfunction",
+  "name": "load-sample-data-to-dynamo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
